frontend/deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: echochat-frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: leandervboven/echochat:frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # env:
          #   - name: VUE_APP_API_URL
          #     value: 
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
                path: /login
                port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
                path: /login
                port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
      imagePullSecrets:
        - name: leanderdockerhub
