frontend/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: echochat-frontend
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
